--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,9 +4,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <script async defer
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDvtndexGCQLEeLUsklFakSejGOElaVlH8&callback=initMap">
-    </script>
+    <!-- <script async defer
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC2SzhcjJgtjHBpk2AT3Pksx1EOYjJpqgk&libraries=places&callback=initMap">
+    </script> -->
+
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC2SzhcjJgtjHBpk2AT3Pksx1EOYjJpqgk&libraries=places&callback=initAutocomplete"async defer></script> -->
+
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC2SzhcjJgtjHBpk2AT3Pksx1EOYjJpqgk&libraries=places"></script>
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
 
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
