map is working, but not following react lifecycle

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,7 +10,7 @@
 
     <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC2SzhcjJgtjHBpk2AT3Pksx1EOYjJpqgk&libraries=places&callback=initAutocomplete"async defer></script> -->
 
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC2SzhcjJgtjHBpk2AT3Pksx1EOYjJpqgk&libraries=places"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC2SzhcjJgtjHBpk2AT3Pksx1EOYjJpqgk&libraries=places&v=3"></script>
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
